<resources>
    <string name="url">localhost</string>
    <string name="app_name">Abaca Disease Detection App</string>
    <string name="main_top_bg">Main Top BG</string>
    <string name="username">Username</string>
    <string name="account_type">Account Type</string>
    <string name="user_avatar">User Avatar</string>
    <string name="weather">Weather</string>
    <string name="updates">Updates</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="assessment">Assessment</string>
    <string name="diagnose">Diagnose</string>
    <string name="disease_index">Disease Index</string>
    <string name="map">Map</string>
    <string name="_1">1</string>
    <string name="email_address">Email Address</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password*</string>
    <string name="lastName">Last Name*</string>
    <string name="first_name">First Name*</string>
    <string name="middle_name">Middle Name</string>
    <string name="don_t_have_an_account_yet">Register</string>
    <string name="bottom_text">A project of the Philippine Fiber Industry Development Authority \nBeta version 2020</string>
    <string name="birthday">Birthday*</string>
    <string name="permanent_address">Permanent Address*</string>
    <string name="occupation">Occupation*</string>
    <string name="institution">Institution</string>
    <string name="fields_with_are_required">Fields with * are required</string>
    <string name="password_reg">Password*</string>
    <string name="email_address_reg">Email Address*</string>
    <string name="tfe_od_app_name" translation_description="Object Detection demo app [CHAR_LIMIT=40]">TFL Detect</string>
    <string name="tfe_od_camera_error" translation_description="Error regarding camera support[CHAR_LIMIT=40]">This device doesn\\t support Camera2 API.</string>
    <string name="diseaseName">DiseaseName</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="proceed">Proceed</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="monitor">Monitor your Abaca\'s health</string>
    <string name="disease_name">Disease Name</string>
    <string name="save">SAVE</string>
    <string name="discard">DISCARD</string>
    <string name="log_out">Log out</string>
    <string name="feature_coming_soon">Feature Coming Soon</string>
    <string name="save_changes">Save changes</string>
    <string name="usernameO">Username</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="detection_mode_desc">Single Diagnose mode for detecting symptoms found on a localized area \n \nMulti Diagnose mode for detecting symptoms in more than one area (this allows detection of stunting)</string>
    <string name="capture_mode">Capture Mode</string>
    <string name="value">value</string>
    <string name="user_account">User Account</string>
    <string name="location_settings">Location Settings</string>
    <string name="confidence_threshold">Confidence Threshold</string>
    <string name="show_welcome_screen_on_app_start">Show Welcome Screen</string>
    <string name="language">Language</string>
    <string name="app_version">App Version</string>
    <string name="developer">Developer</string>
    <string name="tutorial">Tutorial</string>
</resources>