<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".otherActivities.SettingsActivity"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:clipChildren="true"
        android:showDividers="middle"
        android:divider="?android:dividerHorizontal"
        android:orientation="vertical">

        <LinearLayout
            android:background="@drawable/card_clickable"
            android:id="@+id/captureModeSet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/capture_mode"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/captureModeVal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/value"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:background="@drawable/card_clickable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:id="@+id/userAccSet"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/user_account"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/userAccVal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="value"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:background="@drawable/card_clickable"
            android:id="@+id/LocationSet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/location_settings"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/LocationVal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="value"
                android:textSize="15sp" />
        </LinearLayout>
        <LinearLayout
            android:background="@drawable/card_clickable"
            android:id="@+id/ConfidenceThreshSet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/confidence_threshold"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/ConfidenceThreshVal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="value"
                android:textSize="15sp" />
        </LinearLayout>
        <LinearLayout
            android:background="@drawable/card_clickable"
            android:id="@+id/ShowWelcomeScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/show_welcome_screen_on_app_start"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/ShowWelcomeScreenVal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="value"
                android:textSize="15sp" />
        </LinearLayout>
        <LinearLayout

            android:background="@drawable/card_clickable"
            android:id="@+id/languageSet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/language"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/languageVal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="value"
                android:textSize="15sp" />
        </LinearLayout>
        <LinearLayout
            android:background="@drawable/card_clickable"
            android:id="@+id/aboutApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="About"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

        </LinearLayout>


    </LinearLayout>

</ScrollView>