<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".otherActivities.AboutApp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:clipChildren="true"
        android:showDividers="middle"
        android:dividerPadding="2dp"
        android:divider="?android:dividerHorizontal"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/AppVersion"
            android:background="@drawable/card_clickable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/app_version"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/AppVersionVal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/value"
                android:textSize="15sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/guide"
            android:background="@drawable/card_clickable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/tutorial"
                android:textColor="@android:color/black"
                android:textSize="15sp" />


        </LinearLayout>
        <LinearLayout
            android:id="@+id/Developer"
            android:background="@drawable/card_clickable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/developer"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/reportBug"
            android:background="@drawable/card_clickable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="Report Bug"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

        </LinearLayout>


    </LinearLayout>

</ScrollView>